declared button variables

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <body>
     <div class="header"></div>
     <div class="main">
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <button class="black-btn">Black</button>
+            <button class="color-btn">Color</button>
+            <button class="color-scale-btn">Scale</button>
+            <button class="grid-btn">Grid</button>
+            <button class="reset-btn">Reset</button>
+        </div>
         <div class="sketchBox">
             <div class="sketch"></div>
         </div>
