--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
   <body>
     <div class="header"></div>
     <div class="main">
-        <div class="sidebar">
+        <div class="side-bar">
             <button class="black-btn">Black</button>
-            <button class="color-btn">Color</button>
+            <button class="color-btn">
+                <span style="color: red">C</span><span style="color: blue">o</span><span style="color: orange">l</span><span style="color: green">o</span><span style="color: purple">r</span>
+            </button>
             <button class="color-scale-btn">Scale</button>
             <button class="grid-btn">Grid</button>
             <button class="reset-btn">Reset</button>
         </div>
-        <div class="sketchBox">
+        <div class="sketch-box">
             <div class="sketch"></div>
         </div>
     </div>
