creation of slider

--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
         <div class="side-bar">
             <button class="black-btn">Black</button>
             <button class="color-btn">
-                <span style="color: red">C</span><span style="color: blue">o</span><span style="color: orange">l</span><span style="color: green">o</span><span style="color: purple">r</span>
+                <span style="color: red">R</span
+                ><span style="color: orange">a</span
+                ><span style="color: yellow">i</span
+                ><span style="color: green">n</span
+                ><span style="color: blue">b</span
+                ><span style="color: indigo">o</span
+                ><span style="color: red">w</span>
             </button>
-            <button class="color-scale-btn">Scale</button>
-            <button class="grid-btn">Grid</button>
+            <button class="color-scale-btn">
+              <span style="color: red">Choose</span>
+              <span style="color: green">Your</span>
+              <span style="color: blue">Color</span>
+            </button>
+            <div class="slide-container">
+              <input type="range" min="16" max="100" value="1" id="myRange" class="slider">
+            </div>
             <button class="reset-btn">Reset</button>
         </div>
         <div class="sketch-box">
