--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
               <span style="color: blue">Color</span>
             </button>
             <div class="slide-container">
+              <p>Grid Size</p>
               <input type="range" min="16" max="100" value="1" id="myRange" class="slider">
+              <p>Value: <span id="value"></span></p>
             </div>
             <button class="reset-btn">Reset</button>
         </div>
