assigning function to rainbow button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main">
         <div class="side-bar">
             <button class="black-btn">Black</button>
-            <button class="color-btn">
+            <button onclick="changeColor()" class="color-btn">
                 <span style="color: red">R</span
                 ><span style="color: orange">a</span
                 ><span style="color: yellow">i</span
