Added onclick for black button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header"></div>
     <div class="main">
         <div class="side-bar">
-            <button class="black-btn">Black</button>
+            <button onclick="changeToBlack()" class="black-btn">Black</button>
             <button onclick="changeColor()" class="color-btn">
                 <span style="color: red">R</span
                 ><span style="color: orange">a</span
