--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <div class="sketch"></div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+      <p>Built by </p>
+    </div>
   </body>
   <script src="Etch-a-sketch.js"></script>
 </html>
