Addition of link to github repository

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="footer">
-      <p>Built by </p>
+      <p>Built by: <a class='footer-link' href= "https://github.com/T-Hight?tab=repositories">T-Hight</a></p>
     </div>
   </body>
   <script src="Etch-a-sketch.js"></script>
